1.3.16
Changed: Commands have been reworked! You can now specify whether you want to get/set/add/sub the value. Fully supports the "@" notation now, you can even affect multiple players with one command (in theory). And tab completion works better. (#107, #72)
Fixed: Kill command having some strange effects if outOfWorld damage is scaled (#110)

1.3.15
Added: Configs to scale damage taken with either max health or player/area difficulty. How steeply damage amounts scale can be set for each damage source. You can add mod sources to the list too, you just need to know their damage type string (trying enabling debug mode, get hurt by it, then check the log). Check your spelling, there's no way for me to detect a source that doesn't exist. (#99)
Added: Config to make every mob spawn as a blight (be careful with that) (#102)
Changed: Disabling custom heart rendering will now override and disable health text settings (#104)
Changed: Blight speed/strength amplifiers can now be set to -1 to disable them entirely.
Changed: Increase default difficulty search radius to 256.
Fixed: Mobs not receiving extra attack damage or potion effects if their health modifier is very high. This removes the subtractions of difficulty as stats are selected. This may result in harder hitting mobs, even with default settings. (#100)
Fixed (maybe): Desync of health on server when Scaling Health is not allowed to modify health (#104)

1.3.14
Added: Localization key for difficulty meter text.
Fixed: Distance calculations overflowing, resulting in unkillable entities with NaN max health. Bugged entities should fix themselves when you get close to them. (#89)
Fixed: Returning from the End through the portal counting as "dying", potentially resulting in changes to health or difficulty. (#91)
Fixed: Server crash when lunar phases are enabled (#97)

1.3.13
Fixed: Server crash

1.3.12