@@ -1,3 +1,3 @@
-@API(owner = "ScalingHealth", apiVersion = "1", provides = "ScalingHealthAPI")
+@API(owner = "ScalingHealth", apiVersion = "2", provides = "ScalingHealthAPI")
 package net.silentchaos512.scalinghealth.api;
 import net.minecraftforge.fml.common.API;
